<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.farhan.socialappfeature.AddPostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/from"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/addPostUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="14sp"
                android:textColor="@android:color/black"/>

        </LinearLayout>

        <EditText
            android:id="@+id/etAddPostText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:hint="@string/write_your_post"
            android:inputType="textMultiLine"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/imgError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/select_image"
                android:textColor="#f90011"
                android:textSize="12sp"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/addPostImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:maxHeight="200dp"
                android:maxWidth="300dp"
                android:scaleType="fitCenter" />

            <ImageButton
                android:id="@+id/addImageFab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@drawable/ic_add_a_photo" />

        </LinearLayout>

        <Button
            android:id="@+id/btnMakePost"
            android:layout_width="170dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:background="@drawable/round_button"
            android:text="@string/share_post"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

    </LinearLayout>

</ScrollView>

